docs/content/security/auth/plugin_auth/vs-echo-no-auth.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  displayName: echo
  virtualHost:
    domains:
    - '*'
    routes:
    - matcher:
        prefix: /echo
      routeAction:
        single:
          upstream:
            name: default-http-echo-5678
            namespace: gloo-system
